# discord-realtime-analysis

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
discord_analysis/: test.py  test_firebase.py
discord_analysis/app/: app.py
discord_analysis/discord/: bot.py
discord_analysis/firebase/db/: realtime_db.py
discord_analysis/ml/notebooks/: tfidf.joblib
discord_analysis/ml/saved/keras/: tokenizer.pickle
discord_analysis/ml/saved/ml/: count_vector.joblib  naive.joblib
discord_analysis/ml/scripts/: bilstm.py  classify_pipeline.py
discord_analysis/streaming/: kafka.py
